--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
             <h1 class="title is-1 publication-title">💥 Ctrl-Crash: Controllable Diffusion for Realistic Car Crashes</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
-              <span class="author-block">anonymous</span>
+              <span class="author-block">Work by: Anthony Gosselin, Ge Ya Luo, Luis Lara, Florian Golemo, Derek Nowrouzezahrai, Liam Paull, Alexi Jolicoeur-Martineau, Christopher Pal</span>
+              <span class="author-block">Mila</span>
             </div>
             <div class="is-size-5 publication-authors" style="margin-top: 1rem;">
               <span class="author-block">
