--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <h1 class="title is-1 publication-title">💥 Ctrl-Crash: Controllable Diffusion for Realistic Car Crashes</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
-              <span class="author-block">Anthony Gosselin, Ge Ya Luo, Luis Lara, Florian Golemo, Derek Nowrouzezahrai, Liam Paull, Alexia Jolicoeur-Martineau, and Christopher Pal</span>
+              <span class="author-block">Anthony Gosselin, Ge Ya Luo, Luis Lara, Florian Golemo,<br>Derek Nowrouzezahrai, Liam Paull, Alexia Jolicoeur-Martineau, and Christopher Pal</span>
               <span class="author-block"><b>Mila - Quebec AI Institute</b></span>
             </div>
             <div class="is-size-5 publication-authors" style="margin-top: 1rem;">
