New stat counter

--- a/index.html
+++ b/index.html
@@ -663,25 +663,25 @@
   </div>
 </section>
 
-<!-- Default Statcounter code for
-Ctrl-Crash-Anonymous_Visible
-https://notabot713.github.io/ctrlcrash.github.io/ -->
+<!-- Default Statcounter code for Ctrl-Crash-Public
+https://anthonygosselin.github.io/Ctrl-Crash-ProjectPage/
+-->
 <script type="text/javascript">
-  var sc_project=13139283; 
+  var sc_project=13140919; 
   var sc_invisible=0; 
-  var sc_security="7b766924"; 
+  var sc_security="e59a8947"; 
   var scJsHost = "https://";
   document.write("<sc"+"ript type='text/javascript' src='" +
   scJsHost+
   "statcounter.com/counter/counter.js'></"+"script>");
   </script>
-  <noscript><div class="statcounter"><a title="Web Analytics"
-  href="https://statcounter.com/" target="_blank"><img
-  class="statcounter"
-  src="https://c.statcounter.com/13139283/0/7b766924/0/"
-  alt="Web Analytics"
+  <noscript><div class="statcounter"><a title="Web Analytics
+  Made Easy - Statcounter" href="https://statcounter.com/"
+  target="_blank"><img class="statcounter"
+  src="https://c.statcounter.com/13140919/0/e59a8947/0/"
+  alt="Web Analytics Made Easy - Statcounter"
   referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
-<!-- End of Statcounter Code -->
+  <!-- End of Statcounter Code -->
 
   </body>
   </html>
