--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 </a>
               </span>
             </div>
-            
+
             </div>
           </div>
         </div>
@@ -642,7 +642,7 @@
 
 <!--BibTex citation -->
   <section class="section" id="BibTeX">
-    <div class="container is-fluid content">
+    <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>
         @misc{gosselin2025ctrlcrashcontrollablediffusionrealistic,
