--- a/index.html
+++ b/index.html
@@ -172,6 +172,15 @@
                   <span>Code</span>
                 </a>
               </span>
+
+              <span class="author-block">
+                <a href="https://huggingface.co/AnthonyGosselin/Ctrl-Crash" target="_blank" class="button is-small is-light">
+                  <span class="icon">
+                    <i class="fab fa-huggingface"></i>
+                  </span>
+                  <span>Model</span>
+                </a>
+              </span>
             </div>
 
             </div>
